1、更新代码；2、使用文档

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "extra": {
     "think": {
       "config": {
-        "apidoc_v2": "src/config/apidoc.php"
+        "apidoc_v2": "src/config/apidoc_v2.php"
       }
     }
   },
